using non-overloaded method for listen()